make ConfigPrimitive immutable and provide ConfigPrimitive.NULL